# cfoldseeker

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  cds_db_from_ncbi.py  classes.py  env.yml  local.py  main.py  pyproject.toml  remote.py  search.py  setup.py
bioconda_recipe/: meta.yaml
cfoldseeker/: build_cds_db.py  build_db.py  classes.py  communication.py  local.py  local_clustered.py  main.py  remote.py  remote_parsers.py
docs/: api_ref.rst  conf.py  index.rst
docs/guide/: index.rst  install.rst  tutorial.rst  usage.rst
example/: thioalbamide.faa
example/cfoldseeker_search/: binary.txt  clusters.tsv  hits.tsv  session.json  summary.txt
example/query_models/: WP_020634191.1.cif  WP_020634193.1.cif  WP_020634194.1.cif  WP_020634195.1.cif  WP_020634196.1.cif  WP_020634197.1.cif  WP_020634198.1.cif  WP_020634199.1.cif  WP_020634200.1.cif  WP_020634201.1.cif  WP_020634202.1.cif  WP_020634203.1.cif  WP_143267610.1.cif
