[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cfoldseeker"
version = "0.0.0"
description = "Find gene clusters via protein structure similarity"

authors = [
    {name = "Lucas De Vrieze", email = "lucas.devrieze@kuleuven.be"},
	{name = "Miguel Biltjes", email = "miguel.biltjes@kuleuven.be"}
]
maintainers = [
    {name = "Lucas De Vrieze", email = "lucas.devrieze@kuleuven.be"},
	{name = "Miguel Biltjes", email = "miguel.biltjes@kuleuven.be"}
]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython",
    "tqdm",
    "cblaster >=1.3.20",
    "polars >=1.0.0",
    "networkx",
    "requests",
    "fastexcel",
    "kegg-pull"
]

readme = "README.md"

license = {text = "MIT"}

requires-python = ">=3.12.0"

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

[project.scripts]
cfoldseeker = "cfoldseeker.main:main"
cfoldseeker-cds = "cfoldseeker.build_cds_db:main"

[tool.setuptools.packages.find]
include = ["cfoldseeker*"]
